feat: link layers

--- a/src/ProgrammingExercise.Application/ProgrammingExercise.Application.csproj
+++ b/src/ProgrammingExercise.Application/ProgrammingExercise.Application.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProgrammingExercise.Communication\ProgrammingExercise.Communication.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Domain\ProgrammingExercise.Domain.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Exception\ProgrammingExercise.Exception.csproj" />
+  </ItemGroup>
+
 </Project>
