--- a/src/ProgrammingExercise.API/ProgrammingExercise.Api.csproj
+++ b/src/ProgrammingExercise.API/ProgrammingExercise.Api.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProgrammingExercise.Application\ProgrammingExercise.Application.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Communication\ProgrammingExercise.Communication.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Exception\ProgrammingExercise.Exception.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Infrastructure\ProgrammingExercise.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
