--- a/tests/ProgrammingExercise.Application.Test/ProgrammingExercise.Application.Test.csproj
+++ b/tests/ProgrammingExercise.Application.Test/ProgrammingExercise.Application.Test.csproj
@@ -10,16 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.3" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="8.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CommonTestUtilities\CommonTestUtilities.csproj" />
     <ProjectReference Include="..\ProgrammingExercise.Application\ProgrammingExercise.Application.csproj" />
     <ProjectReference Include="..\ProgrammingExercise.Communication\ProgrammingExercise.Communication.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Domain\ProgrammingExercise.Domain.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Exception\ProgrammingExercise.Exception.csproj" />
+    <ProjectReference Include="..\ProgrammingExercise.Infrastructure\ProgrammingExercise.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
